assets/scss/control/_plugin-mode.scss
/* ... */
.btl-gopremium-container {
	color: $light;
	.btl-gopremium {
		&-title {
			color: $white;
		}
		&-content {
			p {
				color: $white;
			}
		}
	}
}

.btl-docs {
	.btl-doc {
		background: #2c3650;
		.btl-doc__title {
			color: $white;
		}
		.btl-doc__content {
			color: $light-darken;
		}
		.btl-doc__url {
			color: $white;
		}
	}
	&:not(:first-child) {
		margin-top: 30px;
	}
}

.btl-broken-links-panel {
	.btl-broken-link-checker-wrapper {
		.btl-broken-link-checker {
			h3 {
				color: $white;
			}
			p {
				color: $light;
			}
			.btl-schedule-wrapper {
				label {
					color: $light;
				}
			}
		}
		&:not(:last-child) {
			margin-bottom: 15px;
		}
		button {
			color: #fff !important;
		}
	}

	.btl-fullsite {
		.btl-broken-link-checker-wrapper-left {
			background-color: inherit;
			border-color: #6e7178;
			h4 {
				color: $light;
			}
		}
		.btl-broken-link-checker-wrapper-right {
			.btl-flc-scan-details,
			.MuiBox-root > .MuiTypography-caption {
				color: $light;
			}
			.btl-flc-scan-details {
				.btl-flc-scanned-count {
					> div {
						background-color: #36405a;
						border-color: #6e7178;
						color: $light;
					}
				}
			}
		}
	}
	&.btl-broken-links-table-wrapper--fullsite {
		.btl-subheader-form {
			button.button {
				background-color: #36405a;
				border-color: #6e7178;
				color: $light;
			}
			.btl-subheader-form-input {
				input,
				.btl-react-select__control {
					background-color: #36405a;
					border-color: #6e7178;
					color: $light;

					&::placeholder {
						color: $light;
					}
				}

				.btl-react-select__value-container > div {
					color: $light;

					.btl-react-select__input > input {
						height: 30px;
					}
				}
			}
		}

		.btl-broken-links-table {
			.rdt_Table {
				.rdt_TableHeadRow,
				.rdt_TableRow {
					border-color: #6e7178;
				}
				> div:nth-child(2):has(:not(.rdt_TableBody)) {
					background-color: transparent;
					border-color: #6e7178;
					color: $light;

					.btl-no-data-found {
						svg {
							stroke: #6e7178;
							* {
								fill: #36405a;
							}
						}
					}
				}
				// {

				// }
			}
		}
	}
}

.btl-broken-links-table-wrapper {
	> header {
		.btl-bulk-actions {
			.btl-select {
				&-button {
					color: #fff;
				}
				.btl-react-select__control {
					background-color: #2c3650;
					border-color: #2c3650;
					.btl-react-select__input {
						input {
							color: $light !important;
						}
					}
					.btl-react-select__placeholder {
						color: $light;
					}
					.btl-react-select__single-value {
						color: $white;
					}
					.btl-react-select__indicators {
						.btl-react-select__indicator {
							svg {
								fill: $light;
							}
						}
					}
				}
			}
		}
	}
	.sc-bBXrwG {
		background: #2c3650;
		color: #fff;
	}
	.rdt_Table {
		.rdt_TableHead {
			.rdt_TableHeadRow {
				border-color: #2c3650;
				background-color: #2c3650;
				.rdt_TableCol {
					div {
						color: $white;
					}
					.rdt_TableCol_Sortable {
						color: $white;
						&:hover {
							color: $white;
						}
					}
				}
			}
		}
		.rdt_TableBody {
			.rdt_TableRow {
				border-color: #2c3650;
				background-color: #2c3650;
				.rdt_TableCell {
					div {
						color: $light;
						a {
							color: $success-lighten;

							& > span {
								color: $light;
							}
						}
					}
					.btl-link-title {
						color: $white;
					}
					.btl-short-url-wrapper {
						.btl-short-url {
							background: rgba($success, 0.3);
							color: $white;
							font-weight: 500;
						}
					}
					.dnd-link-button {
						color: $light-darken;
						&:hover {
							color: $white;
						}
					}
					.btl-confirm-message {
						background: transparent;
						.action-text {
							color: $white;
						}
					}
				}
			}
		}
	}
	.sc-bCwfaz {
		background-color: #2c3650;
		color: $white;
		border-color: transparent;
	}
	.rdt_Pagination {
		background: transparent;
		color: $white;
		> div:last-child {
			button {
				svg {
					fill: $white;
				}
				&:disabled {
					svg {
						fill: $secondary-lighten;
					}
				}
			}
		}
	}
	input[type='text'] {
		border: 1px solid #485474;
		background-color: #485474;
		color: #fff;
	}
}
.btl-analytic {
	.btl-analytic-table-wrapper .rdt_Table .rdt_TableCell .btl-parameter-tracking-values {
		background-color: #36405a;
		border: 1px solid #525c77;
	}
}
.scheduleweekdayselect {
	label {
		border-collapse: collapse;
		input {
			display: none;
		}
		span {
			display: inline-block;
			border: 1px solid #485474;
			border-right: none;
			color: #fff;
		}
		&:first-child {
			span {
				border-top-left-radius: 2px;
				border-bottom-left-radius: 2px;
			}
		}
		&:last-child {
			span {
				border-top-right-radius: 2px;
				border-bottom-right-radius: 2px;
				border-right: 1px solid #485474;
			}
			input:checked + span {
				border-color: #0742e7;
				color: #0742e7;
				position: relative;
				&:after {
					display: none;
				}
			}
		}
		input:checked + span {
			border-color: #0742e7;
			color: #0742e7;
			position: relative;
			&:after {
				content: '';
				position: absolute;
				right: 0;
				top: 0;
				bottom: 0;
				border-right: 1px solid #0742e7;
			}
		}
	}
}
.MuiInputBase-formControl {
	input {
		border: 1px solid #485474;
		background-color: #485474;
		color: #fff;
	}
}

.btl-scan-outputs {
	.btl-scan-output {
		background: #485474;
		box-shadow: 0px 2px 5px rgba(255, 255, 255, 0.08);
		.count {
			color: #fff;
		}
		.title {
			color: #b0b2ba;
		}
	}
}
/* ... */

